#--------------------------------------------------
# 파일명: pyproject.toml
# 이 파일은 poetry에서 사용하는 설정 파일이다.
# - 프로젝트 이름, 버전 , 설명 
# - 포함할 파이썬 폴더
# - 필요한 외부 패키지 목록
# - 프로젝트 빌드 설정
# 등을 정의한다
#--------------------------------------------------

[tool.poetry]

name = "todo"                                   #프로젝트 이름이다. [폴더명과 무관함]
version = "0.1.0"                               # 프로젝트의 버전이다. (업데이트할 때 변경)
description = ""                                # 프로젝트에 대한 간단한 설명이다. 
authors = ["kwakyongjun <pacyfi007@gmail.com>"] # 만든 사람의 이메일
readme = "README.md"                            # 이 프로젝트의 소개 문서 파일 이름

# * 파이썬 코드가 들어 있는 폴더를 지정
# - 일반적으로 우리가 만든 Python 파일이 모여 있는 폴더명을 적는다
packages = [
    { include = "api" }, # * 'api' 폴더 안의 파일들을 패키지로 포함시킴
]

#-------------------------------------------------------
# [의존성 목록: 이 프로젝트에서 필요한 패키지들]
# - 아래에 나열된 모든 패키지는 프로젝트 실행에 꼭 필요함
#-------------------------------------------------------
[tool.poetry.dependencies]

python = "^3.12" # * 이 프로젝트는 파이썬 3.12 이상 버전에서 작동하도록 설정

# * FastAPI: 웹 API 서버를 빠르게 만들 수 있게 해주는 프레임워크
fastapi = "^0.115.12"

# * Uvicorn: #FastAPI 앱을 실행하는 웹 서버 도구
# -  "standard" 옵션을 통해 자동 재시작, 로깅, 보안 등 추가 기능도 포함됨
uvicorn = { extras = ["standard"], version = "^0.34.0" }

# * SQLAlchemt: ORM(object Relational Mapping) 기능을 제공
# - SQL을 집접 쓰지 않고 파이썬 코드로 테이블을 만들고 데이터를 조작할 수 있음
sqlalchemy = "^2.0.40"

# * asyncpg: postgreSQL과 비동기로 연결할 수 있게 해주는 드라이버
# - FastAPI에서 데이터베이스를 빠르게 사용하기 위해 필요함
asyncpg = "^0.30.0"

# * psycopg2-binary: PostgreSQL에 동기 방식으로 연결할 수 있는 드라이버
# - 'migrate_db.py' 같은 초기화 스크립트에서 사용됨
# - asyncpg가 아닌 일반 DB 연결(create_engine) 시 사용
psycopg2-binary = "^2.9.10"

#---------------------------------------------------
# 프로젝트를 빌드(포장하거나 배포)할때 사용하는 설정
# - poetry 내부적으로 사용하는 빌드 도구 지정
#---------------------------------------------------
[build-system]


requires = ["poetry-core"]   # * 빌드르 실행할 때 필요한 도구 이름
build-backend = "poetry.core.masonry.api"  # * 빌드르 실제로 처리해주는 프로그램 이름 (poetry 내부에서 사용